[gd_scene load_steps=16 format=3 uid="uid://4m883pvlq3rc"]

[ext_resource type="Script" uid="uid://ugfejwiy50va" path="res://components/tower_buy_item.gd" id="1_xrjt3"]
[ext_resource type="Texture2D" uid="uid://bosnkotrfix0u" path="res://sprites/arrow_tower.png" id="1_yv4s5"]
[ext_resource type="Texture2D" uid="uid://bghi8x4v6tpbf" path="res://sprites/ui_cost_label.png" id="2_kos4v"]
[ext_resource type="Texture2D" uid="uid://cpx32kpmrfcov" path="res://sprites/num0.png" id="3_alkav"]
[ext_resource type="Texture2D" uid="uid://cn6nqp74duu6q" path="res://sprites/num1.png" id="4_xrjt3"]
[ext_resource type="Texture2D" uid="uid://mmgdxhvjffud" path="res://sprites/num2.png" id="5_8151x"]
[ext_resource type="Texture2D" uid="uid://binpecfwik3ji" path="res://sprites/num3.png" id="6_tgtqr"]
[ext_resource type="Texture2D" uid="uid://bq4bbj7gjudud" path="res://sprites/num4.png" id="7_2gmt3"]
[ext_resource type="Texture2D" uid="uid://ctyktknbbe3jt" path="res://sprites/num5.png" id="8_vtf5d"]
[ext_resource type="Texture2D" uid="uid://bx50aqogqvvjg" path="res://sprites/num6.png" id="9_imvkv"]
[ext_resource type="Texture2D" uid="uid://88sj41v71jb" path="res://sprites/num7.png" id="10_toqx8"]
[ext_resource type="Texture2D" uid="uid://bmler41lapjay" path="res://sprites/num8.png" id="11_pmtoo"]
[ext_resource type="Texture2D" uid="uid://dkdaoi6wuh32r" path="res://sprites/num9.png" id="12_7rb1w"]
[ext_resource type="Texture2D" uid="uid://dgm6mxbsaplku" path="res://sprites/null_digit.png" id="13_qdo2d"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m3sua"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_alkav")
}, {
"duration": 1.0,
"texture": ExtResource("4_xrjt3")
}, {
"duration": 1.0,
"texture": ExtResource("5_8151x")
}, {
"duration": 1.0,
"texture": ExtResource("6_tgtqr")
}, {
"duration": 1.0,
"texture": ExtResource("7_2gmt3")
}, {
"duration": 1.0,
"texture": ExtResource("8_vtf5d")
}, {
"duration": 1.0,
"texture": ExtResource("9_imvkv")
}, {
"duration": 1.0,
"texture": ExtResource("10_toqx8")
}, {
"duration": 1.0,
"texture": ExtResource("11_pmtoo")
}, {
"duration": 1.0,
"texture": ExtResource("12_7rb1w")
}, {
"duration": 1.0,
"texture": ExtResource("13_qdo2d")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[node name="TowerBuyItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xrjt3")
cost = null
TowerPath = null

[node name="TowerSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_yv4s5")

[node name="CostLabel" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = -3.0
offset_right = 596.0
offset_bottom = 497.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_kos4v")

[node name="NumericLabel" type="Control" parent="."]
anchors_preset = 0
offset_left = 187.0
offset_top = 33.0
offset_right = 227.0
offset_bottom = 73.0

[node name="digit1" type="AnimatedSprite2D" parent="NumericLabel"]
position = Vector2(12, 19)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_m3sua")

[node name="digit2" type="AnimatedSprite2D" parent="NumericLabel"]
position = Vector2(41, 19)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_m3sua")

[node name="digit3" type="AnimatedSprite2D" parent="NumericLabel"]
position = Vector2(71, 18)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_m3sua")

[node name="digit4" type="AnimatedSprite2D" parent="NumericLabel"]
position = Vector2(101, 17)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_m3sua")
